--- a/contactForm.html
+++ b/contactForm.html
@@ -29,7 +29,7 @@
 
     <!-- Awal Contact Form -->
     <h3 id="terhubung">GET IN TOUCH</h3>
-    <section>
+    <form>
       <div class="container">
         <div class="container2">
           <div class="nama">
@@ -63,7 +63,7 @@
           </div>
         </div>
       </div>
-    </section>
+    </form>
 
     <!-- Akhir Contact form -->
   </body>
